fix(input, mixin): fix input placeholder mixin and fix label theming.
At the moment the placeholder mixing isn't working, so the the placeholder is always using the browsers default color (`darkgrey`).
This commit fixes the invalid mixin for the placeholder, so the floating label and normal placeholder won't look different anymore.

Also removed the `text-shadow`, because in the specs is no inset shadow, this makes the label look weird.
So the labels will now look as same as in the specs, except that the `foreground-3` color is currently not as same as in the specs. (because it has a opacity of 26, but it should have 38)

Fixes #7429. Closes #7432

--- a/src/components/input/input-theme.scss
+++ b/src/components/input/input-theme.scss
@@ -3,7 +3,6 @@ md-input-container.md-THEME_NAME-theme {
     @include input-placeholder-color('{{foreground-3}}');
     color: '{{foreground-1}}';
     border-color: '{{foreground-4}}';
-    text-shadow: '{{foreground-shadow}}';
   }
 
   > md-icon {
@@ -12,7 +11,6 @@ md-input-container.md-THEME_NAME-theme {
 
   label,
   ._md-placeholder {
-    text-shadow: '{{foreground-shadow}}';
     color: '{{foreground-3}}';
   }
 
